<resources>
    <string name="app_name">Moviez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="imagemovie">imageMovie</string>
    <string name="title_date_of_release">Title Date Of Release</string>
    <string name="title_movie">Title Movie</string>
    <string name="movieTitle">Movie</string>
    <string name="tvShowTitle">TvShow</string>
    <string name="image_detail_movie">Image Detail Movie</string>
    <string name="img_detail_movie_transition">imgDetailMovie</string>
    <string name="overview">Overview</string>
    <string name="text_overview">Text Overview</string>
    <string name="information">Information</string>
    <string name="date_of_release">Release Date :</string>
    <string name="date_of_release_tools">Date Of Release</string>
    <string name="created_by">Created by : Aditiya Prayogo</string>
    <string name="ratting">Ratting</string>
    <string name="tvShowType">tvShow</string>
    <string name="movieType">movie</string>
    <string name="genreList">Genre</string>
    <string name="status">Status :</string>
    <string name="status_tools">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_title">Favorite</string>
    <string name="favButton">favButton</string>
    <string name="unfavoriteTvSeriesInfo">Successful UnFavorite Tv Serries</string>
    <string name="successfulAdded">Successful added to favorite</string>
    <string name="unfavoriteMovieInfo">Successful UnFavorite Movie</string>
</resources>