<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dimens16"
    app:cardCornerRadius="@dimen/dimens8"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="@dimen/dimens16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="@dimen/dimens8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgMovie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagemovie"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens16"
            android:layout_marginTop="@dimen/dimens16"
            android:layout_marginEnd="@dimen/dimens16"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_movie" />

        <RatingBar
            android:id="@+id/rattingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/bluePrimary"
            android:layout_marginTop="@dimen/dimens16"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_marginEnd="@dimen/dimens8"
            android:numStars="5"
            android:isIndicator="true"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            />

        <TextView
            android:id="@+id/txtRattingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens16"
            android:layout_marginStart="@dimen/dimens8"
            app:layout_constraintStart_toEndOf="@id/rattingBar"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            android:textColor="@color/black"
            tools:text="@string/ratting"
            />

        <TextView
            android:id="@+id/txtDateOfRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens16"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/rattingBar"
            app:layout_constraintTop_toBottomOf="@id/rattingBar"
            tools:text="@string/title_date_of_release" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

